src/cli/generate/snapshots/mise__cli__generate__git_pre_commit__tests__git_pre_commit.snap
---
source: src/cli/generate/git_pre_commit.rs
expression: output
---
#!/bin/sh
mise run testing123
