src/cli/generate/snapshots/mise__cli__generate__git_pre_commit__tests__git_pre_commit_write-2.snap
---
source: src/cli/generate/git_pre_commit.rs
expression: "file::read_to_string(&path).unwrap()"
---
#!/bin/sh
mise run pre-commit
