src/cli/generate/snapshots/mise__cli__generate__git_pre_commit__tests__git_pre_commit_write.snap
---
source: src/cli/generate/git_pre_commit.rs
expression: output
snapshot_kind: text
---
Wrote to ~/cwd/.git/hooks/testing123
